--- a/MonthlyStatement/Areas/Personal/Views/Report/Personal.cshtml
+++ b/MonthlyStatement/Areas/Personal/Views/Report/Personal.cshtml
@@ -63,7 +63,7 @@
                                         </td>
                                         <td class="text-center">
                                             <div class="buttons">
-                                                <a class="btn btn-icon btn-primary" data-original-title="Thông tin" href="@Url.Action("PersonalDetail","PersonalReportForm")">
+                                                <a class="btn btn-icon btn-primary" data-original-title="Thông tin" href="@Url.Action("PersonalDetail","Report")">
                                                     Xem
                                                 </a>
                                             </div>
@@ -90,7 +90,7 @@
                                         </td>
                                         <td class="text-center">
                                             <div class="buttons">
-                                                <a class="btn btn-icon btn-primary" data-original-title="Thông tin" href="@Url.Action("PersonalDetail","PersonalReportForm")">
+                                                <a class="btn btn-icon btn-primary" data-original-title="Thông tin" href="@Url.Action("PersonalDetail","Report")">
                                                     Xem
                                                 </a>
                                             </div>
