--- a/MonthlyStatement/Views/Shared/_NavBarPartialView.cshtml
+++ b/MonthlyStatement/Views/Shared/_NavBarPartialView.cshtml
@@ -102,7 +102,7 @@
                 <img alt="image" src="@Url.Content(avt)" class="rounded-circle img-fluid" > <span class="d-sm-none d-lg-inline-block"></span>
             </a>
             <div class="dropdown-menu dropdown-menu-right pullDown">
-                <a href="@Url.Action("Index", "Profile")" class="dropdown-item has-icon">
+                <a href="@Url.Action("Index", "Profile",new { Area = "" })" class="dropdown-item has-icon">
                     <i class="far fa-user"> </i>
                     Profile
                 </a>
