--- a/MonthlyStatement/Areas/Admin/Views/Accounts/Index.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Accounts/Index.cshtml
@@ -6,30 +6,17 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
 <section class="section">
     <div class="section-body">
         <div class="row">
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Tài khoản người dùng</h4>
-                        <div class="card-header-form">
-                            <form>
-                                <div class="input-group">
-                                    <input class="form-control" type="text" id="Search" placeholder="Tìm kiếm" aria-label="Search" data-width="200" style="width: 200px;">
-                                    <div class="input-group-btn">
-                                        <button class="btn btn-primary"><i class="fas fa-search"></i></button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
+                        <h3 class="text-white" style="font-size:1.75rem">Tài khoản người dùng</h3>
                     </div>
-                </div>
-                <div class="card-body">
-                    <div class="row">
-                        <div class="col-sm-12">
-                            <table class="table table-striped dataTable no-footer" id="table-1" role="grid" aria-describedby="table-1_info">
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            <table class="table table-striped" id="table-1">
                                 <thead>
                                     <tr role="row">
                                         <th class="text-center">
@@ -45,10 +32,13 @@
                                             Khoa
                                         </th>
                                         <th>
+                                            Bộ môn
+                                        </th>
+                                        <th>
                                             Vai trò
                                         </th>
                                         <th class="text-center">
-
+                                            Thao tác
                                         </th>
                                     </tr>
                                 </thead>
@@ -58,7 +48,7 @@
                                     {
                                         i = i + 1;
 
-                                        <tr tr role="row" class="Search odd">
+                                        <tr>
                                             <td class="text-center">
                                                 @i
                                             </td>
@@ -86,9 +76,19 @@
                                                 }
                                             </td>
                                             <td>
-                                                @if (item.AspNetRoles.Count() <1)
+                                                @if (item.Profiles.First().department_id == null)
                                                 {
-                                                    <span>Chưa có vai trò</span>
+                                                    <span>Chưa có bộ môn</span>
+                                                }
+                                                else
+                                                {
+                                                    @item.Profiles.FirstOrDefault().Department.department_name
+                                                }
+                                            </td>
+                                            <td>
+                                                @if (item.AspNetRoles.Count() < 1)
+                                                {
+                                                    <div class="badge badge badge-shadow">Không có vai trò</div>
                                                 }
                                                 else
                                                 {
@@ -113,24 +113,3 @@
         </div>
     </div>
 </section>
-
-<script src="~/Scripts/jquery-3.4.1.min.js"></script>
-<script>
-    $(document).ready(function () {
-        function Contains(text_one, text_two) {
-            if (text_one.indexOf(text_two) != -1)
-                return true;
-        }
-        $("#Search").keyup(function () {
-            var searchText = $("#Search").val().toLowerCase();
-            $(".Search").each(function () {
-                if (!Contains($(this).text().toLowerCase(), searchText)) {
-                    $(this).hide();
-                }
-                else {
-                    $(this).show();
-                }
-            });
-        });
-    });
-</script>
