--- a/MonthlyStatement/Areas/Admin/Views/Categories/Edit.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Categories/Edit.cshtml
@@ -7,51 +7,46 @@
 <section class="section">
     <div class="section-body">
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 col-md-12 col-lg-12">
                 <div class="card">
-                    <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Chỉnh sửa danh mục</h4>
+                    <div class="card">
+                        <div class="card-header bg-primary" style="height:100px">
+                            <h4 class="text-white" style="font-size:1.75rem">Chỉnh sửa danh mục</h4>
+                        </div>
                     </div>
-                </div>
-                <div class="col-12">
-                    @using (Html.BeginForm("Edit", "Categories", FormMethod.Post, new { }))
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            @using (Html.BeginForm("Edit", "Categories", FormMethod.Post, new { }))
 
-                    {
-                        <div class="page-inner mt--5">
-                            <div class="row">
-                                <div class="col-xl-12">
-                                    <!-- Account details card-->
-                                    <div class="card mb-4">
-                                        <div class="card-header"><b>Thông tin chi tiết</b></div>
-                                        @Html.HiddenFor(model => model.category_id)
-                                        <div class="card-body" style="margin-top: 0.2rem">
-                                            @if (Model.category_of_id != null)
-                                            {
-                                                <div class="mb-3">
-                                                    <label class="small mb-1">Chọn danh mục cha</label>
-                                                    @Html.DropDownList("category_of_id", null, htmlAttributes: new { @class = "form-control" })
-                                                </div>
-                                            }
-                                            <!-- Form Group (Category Content)-->
-                                            <div class="mb-3">
-                                                <label class="small mb-1">Tên danh mục con</label>
-                                                @Html.EditorFor(model => model.category_content, new { htmlAttributes = new { @class = "form-control", type = "text", @required = "" } })
-                                            </div>
-                                            <div style="text-align: center; margin-top:1.8rem" class="mb-3">
-                                                <button style="width:180px; color:white" type="submit" class="btn btn-primary">
-                                                    Lưu
-                                                </button>
-                                                &emsp;
-                                                <a style="width:180px; color:white;" role="button" class="btn btn-danger" href="@Url.Action("Index", "Categories", new { id = Model.category_id})">
-                                                    Hủy
-                                                </a>
-                                            </div>
+                            {
+                                @Html.HiddenFor(model => model.category_id)
+                                <div class="card-header"><b>Thông tin chi tiết</b></div>
+                                <div class="card-body" style="margin-top: 0.2rem">
+                                    @if (Model.category_of_id != null)
+                                    {
+                                        <div class="mb-3">
+                                            <label class="small mb-1">Chọn danh mục cha</label>
+                                            @Html.DropDownList("category_of_id", null, htmlAttributes: new { @class = "form-control" })
                                         </div>
+                                    }
+                                    <!-- Form Group (Category Content)-->
+                                    <div class="mb-3">
+                                        <label class="small mb-1">Tên danh mục con</label>
+                                        @Html.EditorFor(model => model.category_content, new { htmlAttributes = new { @class = "form-control", type = "text", @required = "" } })
+                                    </div>
+                                    <div style="text-align: center; margin-top:1.8rem" class="mb-3">
+                                        <button style="width:180px; color:white" type="submit" class="btn btn-primary">
+                                            Lưu
+                                        </button>
+                                        &emsp;
+                                        <a style="width:180px; color:white;" role="button" class="btn btn-danger" href="@Url.Action("Index", "Categories", new { id = Model.category_id})">
+                                            Hủy
+                                        </a>
                                     </div>
                                 </div>
-                            </div>
+                            }
                         </div>
-                    }
+                    </div>
                 </div>
             </div>
         </div>
