--- a/MonthlyStatement/Areas/Admin/Views/Faculty/AttendenceList.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/Faculty/AttendenceList.cshtml
@@ -7,161 +7,80 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+
 <section class="section">
     <div class="section-body">
         <div class="row">
             <div class="col-12">
                 <div class="card">
                     <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Danh sách thành viên</h4>
-                        <div class="card-header-form">
-                            <form>
-                                <div class="input-group">
-                                    <input class="form-control" type="text" id="Search" placeholder="Tìm kiếm" aria-label="Search" data-width="200" style="width: 200px;">
-                                    <div class="input-group-btn">
-                                        <button class="btn btn-primary"><i class="fas fa-search"></i></button>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
+                        <h3 class="text-white" style="font-size:1.75rem">Danh sách thành viên</h3>
                     </div>
-                </div>
-                <div class="card-body">
-
-                    <div class="form-group">
+                    <div class="card-body">
                         <div class="col-sm-12 buttons">
                             <a style="color:white" type="button" class="btn btn-primary btn-round" href="#">
                                 <i class="fa fa-plus"></i>
                                 Thêm thành viên
                             </a>
-                            <a style="color:white" class="btn btn-warning btn-round" href="#" type="button" data-toggle="modal"
-                               data-target="#exampleModalCenter">
-                                <i class="fa fa-plus"></i>
-                                Import
-                            </a>
                         </div>
-                    </div>
-                    <div class="table-responsive">
-                        <table class="table table-striped" id="table-1">
-                            <thead>
-                                <tr>
-                                    <th>STT</th>
-                                    <th>Email</th>
-                                    <th>Tên</th>
-                                    <th>Khoa</th>
-                                    <th>Vai trò</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                @foreach (var item in Model)
-
-                                {
-                                    i = i + 1;
-                                    <tr>
-                                        <td>
-                                            @i
-                                        </td>
-                                        <td>
-                                            @item.AspNetUser.Email
-                                        </td>
-                                        <td>
-                                            @item.user_name
-                                        </td>
-                                        <td>
-                                            @if (item.faculty_id == null)
-                                            {
-                                                <span>Chưa có khoa</span>
-                                            }
-                                            else
-                                            {
-                                                @item.Faculty.faculty_name
-                                            }
-                                        </td>
-                                        <td>
-                                        </td>
+                        <div class="table-responsive">
+                            <table class="table table-striped" id="table-1">
+                                <thead>
+                                    <tr role="row">
+                                        <th class="text-center">
+                                            STT
+                                        </th>
+                                        <th>
+                                            Email
+                                        </th>
+                                        <th>
+                                            Tên
+                                        </th>
+                                        <th>
+                                            Khoa
+                                        </th>
+                                        <th class="text-center">
+                                        Vai trò
+                                        </th>
                                     </tr>
-                                }
-                            </tbody>
-                        </table>
+                                </thead>
+                                <tbody>
+                                    @foreach (var item in Model)
+
+                                    {
+                                        i = i + 1;
+
+                                        <tr>
+                                            <td class="text-center">
+                                                @i
+                                            </td>
+                                            <td>
+
+                                            </td>
+                                            <td>
+
+                                            </td>
+                                            <td>
+                                                @if (item.faculty_id == null)
+                                                {
+                                                    <span>Chưa có khoa</span>
+
+                                                }
+                                                else
+                                                {
+                                                    @item.Faculty.faculty_name
+                                                }
+                                            </td>
+                                            <td class="text-center">
+                                            </td >
+                                        </tr>
+                                    }
+                                </tbody>
+                            </table>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
-     aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalCenterTitle">Thêm danh sách người dùng</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
-            </div>
-
-            <div class="modal-body">
-                <div class="form-group">
-                    <label>File</label>
-                    <input type="file" id="fileimport" class="form-control">
-                </div>
-                <p id="importfilevalidation" hidden="hidden" class="text-danger"></p>
-            </div>
-            <div class="modal-footer bg-whitesmoke br">
-                <button type="button" class="btn btn-primary" id="importUser">Save</button>
-                <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-</div>
-<script src="~/Scripts/jquery-3.4.1.min.js"></script>
-<script>
-    $(document).ready(function () {
-        function Contains(text_one, text_two) {
-            if (text_one.indexOf(text_two) != -1)
-                return true;
-        }
-        $("#Search").keyup(function () {
-            var searchText = $("#Search").val().toLowerCase();
-            $(".Search").each(function () {
-                if (!Contains($(this).text().toLowerCase(), searchText)) {
-                    $(this).hide();
-                }
-                else {
-                    $(this).show();
-                }
-            });
-        });
-        $('#importUser').on('click', function () {
-
-            $('#importfilevalidation').hide();
-            let fileimport = $('#fileimport').val();
-            let fileType = fileimport.substr(fileimport.lastIndexOf('.') + 1).toLowerCase();
-            var check = true;
-
-            if (fileimport.trim().length < 1) {
-                check = false;
-                $('#importfilevalidation').text("Bạn chưa chọn file, Hãy chọn file danh sách cần nhập.").show().prop("hidden", false);
-            } else if (fileType != "xlsx" && fileType != "xls") {
-                check = false;
-                $('#importfilevalidation').text("File không đúng định dạng, Vui lòng chọn file có định dạng .xls/.xlsx.").show().prop("hidden", false);
-            }
-            if (check == true) {
-                var formData = new FormData();
-                formData.append('lstUser', $("#fileimport")[0].files[0]);
-
-                $.ajax({
-                    url: $('#requestUrl').val() + 'Admin/Faculty/ImportUser',
-                    type: 'POST',
-                    dataType: 'html',
-                    contentType: false,
-                    processData: false,
-                    data: formData
-                }).done(function (ketqua) {
-                    alert('ok');
-                    $('#fileimport').val(null);
-                });
-            }
-        });
-    });
-</script>
