--- a/MonthlyStatement/Areas/Admin/Views/ReportPeriods/Edit.cshtml
+++ b/MonthlyStatement/Areas/Admin/Views/ReportPeriods/Edit.cshtml
@@ -1,74 +1,64 @@
 ﻿@model MonthlyStatement.Models.ReportPeriod
 
 @{
+    ViewBag.Title = "Edit";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <section class="section">
     <div class="section-body">
         <div class="row">
-            <div class="col-12">
+            <div class="col-12 col-md-12 col-lg-12">
                 <div class="card">
-                    <div class="card-header bg-primary" style="height:100px">
-                        <h4 class="text-white" style="font-size:1.75rem">Thông tin @Model.report_period_name</h4>
-                    </div>
-                </div>
-                <div class="col-12">
-
-                    @using (Html.BeginForm("Edit", "ReportPeriods", FormMethod.Post, new { }))
-                    {
-                        <div class="page-inner mt--5">
-                            <div class="row">
-                                <div class="col-xl-12">
-                                    <!-- Account details card-->
-                                    <div class="card mb-4">
-                                        <div class="card-header"><b>Thông tin chi tiết</b></div>
-
-                                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                        @Html.HiddenFor(model => model.report_period_id)
-
-                                        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                                        @Html.HiddenFor(model => model.report_year_id)
-
-                                        <div class="card-body" style="margin-top: 0.2rem">
-                                            <!-- Form Group (Tên báo cáo)-->
-                                            <div class="mb-3">
-                                                <label class="small mb-1">Tên kỳ báo cáo</label>
-                                                <input type="text" class="form-control" placeholder="Email" name="email" value="@Model.report_period_name" readonly="">                                                @Html.ValidationMessageFor(model => model.report_period_name, "", new { @class = "text-danger" })
-                                            </div>
-                                            <!-- Form Group (Ngày bắt đầu)-->
-                                            <div class="mb-3">
-                                                <label class="small mb-1">Ngày bắt đầu</label>
-                                                @Html.TextBoxFor(model => model.start_date,new { @class = "form-control" })
-                                                @Html.ValidationMessageFor(model => model.start_date, "", new { @class = "text-danger" })
-                                            </div>
-                                            <!-- Form Group (Ngày báo cáo)-->
-                                            <div class="mb-3">
-                                                <label class="small mb-1">Ngày báo cáo</label>
-                                                @Html.TextBoxFor(model => model.deadline_date, new { @class = "form-control"  })
-                                                @Html.ValidationMessageFor(model => model.deadline_date, "", new { @class = "text-danger" })
-                                            </div>
-                                            <!-- Form Group (Ngày kết thúc)-->
-                                            <div class="mb-3">
-                                                <label class="small mb-1">Ngày kết thúc</label>
-                                                @Html.TextBoxFor(model => model.end_date, new { @class = "form-control"  })
-                                                @Html.ValidationMessageFor(model => model.end_date, "", new { @class = "text-danger" })
-                                            </div>
-                                            <div style="text-align: center; margin-top:1.8rem" class="mb-3">
-                                                <button style="width:180px; color:white" type="submit" class="btn btn-primary">
-                                                    Lưu
-                                                </button>
-                                                &emsp;
-                                                <a style="width:180px; color:white;" role="button" class="btn btn-danger" href="@Url.Action("Index", "ReportPeriods", new { id = Model.report_year_id})">
-                                                    Hủy
-                                                </a>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                    <div class="card">
+                        <div class="card-header bg-primary" style="height:100px">
+                            <h4 class="text-white" style="font-size:1.75rem">Thông tin @Model.report_period_name</h4>
                         </div>
-                    }                
+                    </div>
+                    <div class="card-body">
+                        <div class="table-responsive">
+                            @using (Html.BeginForm("Edit", "ReportPeriods", FormMethod.Post, new { }))
+                            {
+
+                                <div class="card-header"><b>Thông tin chi tiết</b></div>
+                                @Html.HiddenFor(model => model.report_period_id)
+                                @Html.HiddenFor(model => model.report_year_id)
+
+
+                                <!-- Form Group (Tên kỳ)-->
+                                <div class="mb-3">
+                                    <label class="small mb-1">Tên kỳ báo cáo</label>
+                                    @Html.TextBoxFor(model => model.report_period_name, new { @class = "form-control", @required = "" })
+                                </div>
+
+                                <!-- Form Group (Ngày bắt đầu)-->
+                                <div class="mb-3">
+                                    <label class="small mb-1">Ngày bắt đầu</label>
+                                    @Html.TextBoxFor(model => model.start_date, new { @class = "form-control", @required = "" })
+                                </div>
+                                <!-- Form Group (Ngày báo cáo)-->
+                                <div class="mb-3">
+                                    <label class="small mb-1">Ngày báo cáo</label>
+                                    @Html.TextBoxFor(model => model.deadline_date, new { @class = "form-control", @required = "" })
+                                </div>
+                                <!-- Form Group (Ngày kết thúc)-->
+                                <div class="mb-3">
+                                    <label class="small mb-1">Ngày kết thúc</label>
+                                    @Html.TextBoxFor(model => model.end_date, new { @class = "form-control", @required = "" })
+                                </div>
+
+                                <div style="text-align: center; margin-top:1.8rem" class="mb-3">
+                                    <button style="width:180px; color:white" type="submit" class="btn btn-primary">
+                                        Lưu
+                                    </button>
+                                    &emsp;
+                                    <a style="width:180px; color:white;" role="button" class="btn btn-danger" href="@Url.Action("Index", "ReportPeriods", new { id = Model.report_year_id})">
+                                        Hủy
+                                    </a>
+                                </div>
+                            }
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
