--- a/MonthlyStatement/Views/Shared/_Layout.cshtml
+++ b/MonthlyStatement/Views/Shared/_Layout.cshtml
@@ -18,9 +18,9 @@
     <link rel="stylesheet" href="~/assets/css/components.css" />
     <!-- Custom style CSS -->
     <link rel="stylesheet" href="~/assets/css/custom.css" />
-    <link rel='shortcut icon' type='image/x-icon' href='~/assets/img/vlu/logo.png' />
     <link rel="stylesheet" href="~/assets/bundles/pretty-checkbox/pretty-checkbox.min.css">
-    <link rel="stylesheet" href="~/assets/bundles/dropzonejs\dropzone.css">
+    <link rel="stylesheet" href="~/assets/bundles/dropzonejs/dropzone.css">
+    <link rel='shortcut icon' type='image/x-icon' href='~/assets/img/vlu/logo.png' />
 </head>
 
 <body>
@@ -45,7 +45,10 @@
                                 <a href="@Url.Action("Index", "Accounts", new { Area = "Admin" })" class="nav-link"><i data-feather="user-check"></i><span>Quản lý tài khoản</span></a>
                             </li>
                             <li class=@(ViewBag.Title == "Quản lý khoa" ? "active" : "nav-item")>
-                                <a href="@Url.Action("Index", "Faculty", new { Area = "Admin" })" class="nav-link"><i data-feather="user"></i><span>Quản lý khoa</span></a>
+                                <a href="@Url.Action("Index", "Faculty", new { Area = "Admin" })" class="nav-link"><i data-feather="book"></i><span>Quản lý khoa</span></a>
+                            </li>
+                            <li class=@(ViewBag.Title == "Quản lý danh mục" ? "active" : "nav-item")>
+                                <a href="@Url.Action("Index", "Categories", new { Area = "Admin" })" class="nav-link"><i data-feather="grid"></i><span>Quản lý danh mục</span></a>
                             </li>
                             <li class="dropdown">
                             <li class=@(ViewBag.Title == "Quản lý báo cáo" ? "active" : "nav-item")>
@@ -58,9 +61,6 @@
                                     <li><a class="nav-link" href="#">Cá nhân</a></li>
                                 </ul>
                             </li>
-                            <li class=@(ViewBag.Title == "Quản lý danh mục" ? "active" : "nav-item")>
-                                <a href="@Url.Action("Index", "Categories", new { Area = "Admin" })" class="nav-link"><i data-feather="grid"></i><span>Quản lý danh mục</span></a>
-                            </li>
                             <li class="dropdown">
                                 <a href="#" class="nav-linkn"><i data-feather="bar-chart"></i><span>Thống kê</span></a>
                             </li>
@@ -70,10 +70,10 @@
                     {
                         <ul class="sidebar-menu">
                             <li class=@(ViewBag.Title == "Quản lý báo báo" ? "active" : "nav-item")>
-                                <a href="@Url.Action("Personal", "Report", new { Area = "Personal" })" class="nav-link"><i data-feather="user"></i><span>Quản lý báo cáo</span></a>
+                                <a href="@Url.Action("Personal", "Report", new { Area = "Personal" })" class="nav-link"><i data-feather="file"></i><span>Quản lý báo cáo</span></a>
                             </li>
                             <li class=@(ViewBag.Title == "Quản lý biểu mẫu" ? "active" : "nav-item")>
-                                <a href="@Url.Action("Index", "FormReport", new { Area = "Personal" })" class="nav-link"><i data-feather="user"></i><span>Quản lý biểu mẫu</span></a>
+                                <a href="@Url.Action("Index", "FormReport", new { Area = "Personal" })" class="nav-link"><i data-feather="edit"></i><span>Quản lý biểu mẫu</span></a>
                             </li>
                             <li class="dropdown">
                             <li class=@(ViewBag.Title == "Thống kê" ? "active" : "nav-item")>
@@ -90,6 +90,20 @@
         </div>
     </div>
     <input hidden="hidden" id="requestUrl" value="@Url.Content("~")" />
+
+    <!-- General JS Scripts -->
+    <script src="~/assets/js/app.min.js"></script>
+    <!-- JS Libraies -->
+    <script src="~/assets/bundles/apexcharts/apexcharts.min.js"></script>
+    <script src="~/assets/bundles/sweetalert/sweetalert.min.js"></script>
+    <script src="~/assets/bundles/datatables/datatables.min.js"></script>
+    <script src="~/assets/bundles/datatables/DataTables-1.10.16/js/dataTables.bootstrap4.min.js"></script>
+    <script src="~/assets/bundles/datatables/datatables.min.js"></script>
+    <script src="~/assets/bundles/jquery-ui/jquery-ui.min.js"></script>
+    <script src="~/assets/bundles/dropzonejs/min/dropzone.min.js"></script>
+    <!-- Page Specific JS File -->
+    <script src="~/assets/js/page/advance-table.js"></script>
+    <script src="~/assets/js/page/auth-register.js"></script>
     <script src="~/assets/js/page/calendar.js"></script>
     <script src="~/assets/js/page/chart-amchart.js"></script>
     <script src="~/assets/js/page/chart-apexcharts.js"></script>
@@ -126,22 +140,13 @@
     <script src="~/assets/js/page/vector-map.js"></script>
     <script src="~/assets/js/page/widget-chart.js"></script>
     <script src="~/assets/js/page/widget-data.js"></script>
-    <script src="~/assets/js/page/advance-table.js"></script>
-    <script src="~/assets/js/page/auth-register.js"></script>
-    <script src="~/assets/bundles/dropzonejs/min/dropzone.min.js"></script>
-    <!-- General JS Scripts -->
-    <script src="~/assets/js/app.min.js"></script>
-    <!-- JS Libraies -->
-    <script src="~/assets/bundles/apexcharts/apexcharts.min.js"></script>
-    <!-- Page Specific JS File -->
-    <script src="~/assets/js/page/index.js"></script>
     <!-- Template JS File -->
     <script src="~/assets/js/scripts.js"></script>
-    <script src="~/assets/js/custom.js"></script>
+
     <!-- Custom JS File -->
-    <script src="~/assets/bundles/sweetalert/sweetalert.min.js"></script>
-    <script src="~/assets/bundles/datatables/datatables.min.js"></script>
-    <script src="~/assets/bundles/datatables/DataTables-1.10.16/js/dataTables.bootstrap4.min.js"></script>
+    <script src="~/assets/js/custom.js"></script>
+
+
     <script type="text/javascript">
         var no = 10;
         if (matchMedia('only screen and (max-width: 767px)').matches) {
